完成頁面上傳

--- a/02.html
+++ b/02.html
@@ -12,42 +12,51 @@
   <body>
     <div class="wrap">
       <header class="header">
+        <!-- h1 -->
         <h1 class="h1">
-          <!--   -->
+          <!-- 未登入前隱藏法院名稱 -->
+          <!-- <span class="dep"><a href="">臺灣臺北地方法院</a></span> -->
+          <!-- sys手機版才顯示 -->
           <span class="sys">《訴訟程序視訊諮詢服務》管理系統</span>
           <time>112-7-24 上午</time>
         </h1>
-
         <div class="navInfo">
           <div class="member">
-            XX院區 朱小伶 <a href="" class="setting">設定</a>
+            XX院區 朱小伶
+            <a href="popup1.html" class="setting" target="_blank">設定</a>
           </div>
-          <a href="" class="logOut">登出</a>
+          <a href="01.html" class="logOut">登出</a>
         </div>
+        <!-- 更新訊息 -->
         <div class="refresh">
           26秒後自動更新
-          <button>手動更新</button>
+          <a href="">手動更新</a>
         </div>
+        <!-- subTitle內容上方大標 -->
         <div class="subTitle">
           <span>《訴訟程序視訊諮詢服務》</span>管理系統
         </div>
       </header>
+      <!-- 主要內容區 -->
       <div class="mainContent">
         <div class="welcome">
+          <!-- 歡迎訊息 -->
           <div class="welcomeTxt">
             <span class="opening">您好</span>
             <span class="name">凌小天</span>
             <span class="zone">(新北市烏來區) </span>
             請選擇欲使用的法院系統
           </div>
+          <!-- 檔案下載 -->
           <div class="download">
             <a href=""><img src="images/icon_pdf.png" alt="" />操作手冊下載</a>
           </div>
         </div>
+        <!-- 選擇法院 -->
         <div class="court">
-          <a href="">臺灣臺北地方法院</a>
-          <a href="">臺北高等行政法院</a>
-          <a href="">智慧財產及商業法院</a>
+          <a href="" target="_blank">臺灣臺北地方法院</a>
+          <a href="" target="_blank">臺北高等行政法院</a>
+          <a href="" target="_blank">智慧財產及商業法院</a>
         </div>
       </div>
     </div>
