修改檔案下載位址

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <![endif]-->
     <!-- mainJs -->
     <link rel="stylesheet" href="css/lpoc.css" />
-    <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon" />
     <style>
       .demo_wrap {
         max-width: 1000px;
@@ -158,9 +156,7 @@
     <div class="demo_wrap">
       <h1>《訴訟程序視訊諮詢服務》管理系統</h1>
       <div class="btnGrp">
-        <a href="https://github.com/HywebU00/2023_nhia_member.git" class="btn"
-          >file download</a
-        >
+        <a href="https://github.com/HywebU00/2023_lpoc.git">file download</a>
       </div>
       <div class="tableWrapper">
         <table>
