--- a/index.html
+++ b/index.html
@@ -253,6 +253,12 @@
               <td><a href="popup2.html"></a></td>
               <td></td>
             </tr>
+            <tr>
+              <td></td>
+              <td>404</td>
+              <td><a href="404.html"></a></td>
+              <td></td>
+            </tr>
           </tbody>
         </table>
       </div>
